correct button alignments

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -73,6 +73,10 @@ a {
 	color: #336699;
 }
 
+#games-page .btn-success.btn-modal {
+  margin-bottom: 0em;
+  margin-left: 1.5em;
+}
 
 
 
